alb.tf
#Provisions ALB
resource "aws_lb" "alb" {
  name               = "roboshop-${var.ENV}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_sg.id]
  subnets            = [for subnet in aws_subnet.public : subnet.id]

  enable_deletion_protection = false

  tags = {
    Environment = "production"
  }
}
